2004-08-11  Dossy Shiobara <dossy@panoptic.com>

	* nsd/nsconf.c (1.32.2.3): Inability to resolve nsconf.hostname to
	  set nsconf.address is no longer fatal, and instead defaults to
	  "0.0.0.0".  Fixes SF Bug #994072.  Backported from HEAD.

2004-08-11  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.17.2.7): Fixed crash bug when virtual servers are
	  configured, but the "hostname" parameter didn't match any of the
	  virtual servers.  Fixed by introducing new "defaultserver"
	  parameter in the comm. config that must refer to one of the
	  virtual servers being defined.  Backported from HEAD.

2004-08-11  Dossy Shiobara <dossy@panoptic.com>

	* sample-config.tcl (1.11.2.2): Add "defaultserver" parameter in
	  sample config.  Backported from HEAD.

2004-08-05  Rob Crittenden <rcrittenden0569@aol.com>

	* nsd/tclhttp.c: Add new option to ns_http wait, -servicetime, so
	  you can capture how long the HTTP request took.

2004-07-28  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.8): BUMP: 4.0.8a

2004-07-28  Dossy Shiobara <dossy@panoptic.com>

	* configure (1.15.2.1), configure.in (1.13.2.1): Clean up
	  configure.in, regenerate configure with autoconf2.13, and clear
	  CCRPATH/LDRPATH if CCRFLAGS/LDRFLAGS are empty.  Closes SF Bug
	  #640754.  Backported from HEAD.

2004-07-19  tag aolserver_v40_r7

2004-07-19  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.7, aolserver_v40_r7): BUMP: 4.0.7

2004-07-18  Dossy Shiobara <dossy@panoptic.com>

	* nsd/return.c (1.33.2.6): Fix bug where internal redirect for 401
	  omitted including the HTTP auth.  "WWW-Authenticate:" header.
	  Fixes bug #674033.  Backported from HEAD.

2004-07-18  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: nsd.h (1.77.2.6), init.c (1.5.2.1), nsconf.c (1.32.2.2):
	  Ns_GetAddrByHost() reports errors via Ns_Log(), so calls to it
	  should be done after Ns_Log has been initialized, otherwise very
	  unhelpful error messages are produced.  In particular, this